Mejore el ENvio del Formulario, desaparicion automatica

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <section class="hero d-flex align-items-center justify-content-center">
     <div class="container form-container p-5 rounded">
       <h1 class="text-center mb-4">🚀 Bienvenido a FuturaTech</h1>
-      <p class="text-center text-white mb-5">Suscríbete para recibir nuestro PDF exclusivo según tu interés.</p>
+      <p class="text-center text-white mb-5">
+        Suscríbete para recibir nuestro PDF exclusivo y descubre cómo potenciar tus habilidades en negocios digitales, desarrollo web y data science.
+      </p>
 
       <form id="miFormulario">
         <h4 class="text-white mb-3">Datos Personales</h4>
@@ -98,48 +100,10 @@
     </div>
   </section>
 
-  <!-- Sección Sobre la Empresa -->
-  <section class="info py-5">
-    <div class="container info-container p-5 rounded">
-      <h2 class="mb-4 text-center">Sobre FuturaTech</h2>
-      <p class="lead text-center">FuturaTech es una empresa profesional dedicada a brindar soluciones integrales en consultoría empresarial, negocios digitales, desarrollo web, data science y data engineering. Ayudamos a nuestros clientes a optimizar procesos, implementar tecnología y maximizar resultados.</p>
-    </div>
-  </section>
-
-  <!-- Sección Servicios -->
-  <section class="servicios py-5 bg-light">
-    <div class="container">
-      <h2 class="mb-5 text-center">Nuestros Servicios Profesionales</h2>
-      <div class="row g-4 text-center">
-        <div class="col-md-4 fade-in">
-          <div class="card servicio-card h-100 p-3">
-            <i class="bi bi-briefcase-fill" style="font-size:2rem;"></i>
-            <h5 class="mt-2">Consultoría Empresarial</h5>
-            <p>Asesoramiento estratégico para optimizar operaciones, procesos y decisiones, aumentando la eficiencia de tu empresa.</p>
-          </div>
-        </div>
-        <div class="col-md-4 fade-in">
-          <div class="card servicio-card h-100 p-3">
-            <i class="bi bi-laptop" style="font-size:2rem;"></i>
-            <h5 class="mt-2">Negocios Digitales & Desarrollo Web</h5>
-            <p>Desarrollo de plataformas, tiendas online y aplicaciones Full Stack con código limpio, escalable y profesional.</p>
-          </div>
-        </div>
-        <div class="col-md-4 fade-in">
-          <div class="card servicio-card h-100 p-3">
-            <i class="bi bi-bar-chart-fill" style="font-size:2rem;"></i>
-            <h5 class="mt-2">Data Science & Data Engineering</h5>
-            <p>Análisis de datos, modelos predictivos y arquitecturas de datos robustas para decisiones inteligentes basadas en información real.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
+  <!-- Footer Mejorado -->
   <footer class="py-4 footer-section text-center">
     <p>© 2025 FuturaTech. Todos los derechos reservados.</p>
-    <p>Síguenos en <i class="bi bi-facebook"></i> <i class="bi bi-twitter"></i> <i class="bi bi-instagram"></i></p>
+    <p>Desarrollado por <a href="https://www.kevinluna.wuaze.com/" target="_blank" style="color:#F4a700; text-decoration:underline;">Kevin Luna</a></p>
   </footer>
 
   <!-- Scripts -->
@@ -147,4 +111,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
