agregue nuevo Interes

--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@
           <div class="col-md-6 fade-in">
             <select name="intereses" class="form-select input-field" required>
               <option value="">Selecciona tu interés</option>
-              <option>Emprendimiento</option>
+              <!--<option>Emprendimiento</option>
               <option>Data Science</option>
               <option>Data Engineering</option>
               <option>Desarrollo Web Full Stack</option>
               <option>Negocios Digitales</option>
               <option>Inteligencia Artificial</option>
-              <option>Automatización de Procesos</option>
+              <option>Automatización de Procesos</option>-->
+               <option>Análisis de Ventas con Python y Power BI</option> <!-- ✅ Nueva opción -->
             </select>
           </div>
         </div>
